Separate title page added

--- a/verslag.tex
+++ b/verslag.tex
@@ -1,24 +1,8 @@
 \documentclass[a4paper]{report}
 \usepackage[dutch]{babel}
-\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
-
-\title{Eindverslag Ontwerpproject}
-\date{}
-
-\author{
-	Joost van Doorn\\
-	\and
-	Lennart Buit\\
-	\and
-	Thijs Scheepers\\
-	\and
-	Pim Jager
-	\and
-	Martijn Roo\\
-}
 
 \begin{document}
-\maketitle
+\input{./titlepage.tex}
 
 \chapter{Introductie}
 \section{Sectie}
