Outline architecture added

--- a/verslag.tex
+++ b/verslag.tex
@@ -9,6 +9,20 @@
 \subsection{Subsectie}
 Tekst in subsectie.
 
+\chapter{Technisch Ontwerp}
+\section{Architectuur}
+\subsection{Haskell}
+\subsubsection{API}
+\subsubsection{Server}
+\subsection{Protocol}
+\subsubsection{Restful vs RPC}
+\subsubsection{Websockets}
+\subsubsection{Events}
+\subsubsection{Interface data}
+\subsection{Javascript}
+\subsubsection{Communicatie}
+\subsubsection{Tekenen}
+\subsubsection{Debug Console}
 
 \newpage
 \bibliographystyle{abbrv}
