--- a/verslag.tex
+++ b/verslag.tex
@@ -13,7 +13,7 @@ Tekst in subsectie.
 \chapter{Technisch Ontwerp}
 \section{Architectuur}
 Canvas.hs heeft een ietwat ingewikkelde architectuur. Dit komt vooral door de verschillende technologieën die nodig zijn om het HTML5 Canvas te verbinden met de, te ontwikkelen, Haskell API voor het bouwen van interfaces.
-\includegraphics{architecture.png}
+\includegraphics[keepaspectratio,width=0.9\textwidth]{architecture.png}
 \subsection{Haskell}
 
 \subsubsection{API}
