--- a/Hoofdstukken/technisch_ontwerp.tex
+++ b/Hoofdstukken/technisch_ontwerp.tex
@@ -1,6 +1,6 @@
 \chapter{Technisch Ontwerp}
 \section{Architectuur}
-Canvas.hs heeft een ietwat ingewikkelde architectuur. Dit komt vooral door de verschillende technologieën die nodig zijn om het HTML5 Canvas te verbinden met de te ontwikkelen Haskell API voor het bouwen van interfaces.
+Canvas.hs heeft een redelijk gecompliceerde architectuur. Dit komt vooral door de verschillende technologieën die nodig zijn om het HTML5 Canvas te verbinden met de te ontwikkelen Haskell API voor het bouwen van interfaces. In afbeelding \ref{fig:overzicht_architectuur} is een schematische weergave van de architectuur weergegeven.
 
 \begin{figure}
 \begin{center}
@@ -11,14 +11,15 @@ Canvas.hs heeft een ietwat ingewikkelde architectuur. Dit komt vooral door de ve
 \end{figure}
 
 \subsection{Haskell}
-Canvas.hs is een library die de programmeur kan importeren in zijn programma en daarna met de API die Canvas.hs aanbiedt gemakkelijk een uitgebreide user interface mee kan bouwen. Canvas.hs zal zich focusen op elementaire input en geen ondersteuning hebben voor high level interface elementen zoals buttons en textarea's. Deze elementen zouden met behulp van Canvas.hs wel eenvoudig te implementerne moeten zijn.
+Canvas.hs is een library die de programmeur kan importeren in zijn programma om er daarna met de API die Canvas.hs aanbiedt gemakkelijk een uitgebreide user interface mee te bouwen. Canvas.hs zal zich focussen op elementaire input en geen ondersteuning hebben voor high level interface elementen zoals buttons en textarea's. Deze elementen zouden met behulp van Canvas.hs wel eenvoudig te implementeren moeten zijn.
+
 \subsubsection{API}
-De programmeur die gebruik maakt van Canvas.hs zal op een eenvoudige wijze gebruik moeten maken van onze library. Daarom is het belangrijk dat er een API aangeboden wordt die eenvoudig te begrijpen is en niet teveel features bevat maar daarnaast wel de flexibiliteit biedt om een zeer complexe interface mee te bouwen. Dit is dan ook wat wij gaan doen. Het tekenen van elementen zal zo opgezet worden zodat de programmeur met een blik op zijn code goed kan begrijpen wat er getekend wordt.
+De programmeur die gebruik maakt van Canvas.hs zal op een eenvoudige wijze gebruik kunnen maken van onze library. Daarom is het belangrijk dat er een API aangeboden wordt die eenvoudig te begrijpen is en niet teveel features bevat maar daarnaast wel de flexibiliteit biedt om een zeer complexe interface mee te bouwen.
 
 \subsubsection{Verbinding met de interface}
-De verbinding met het canvas wordt bewerkstelligd met een eenvoudige HTTP server. Deze server biedt de gebruiker de mogelijkheid om via een webbrowser het Haskell programma te benaderen. De HTTP server biedt pagina's aan waarin JavaScript en HTML samenwerken om het canvas te betekenen.
+De verbinding met het canvas wordt bewerkstelligd met een eenvoudige HTTP server. Deze server biedt de gebruiker de mogelijkheid om via een webbrowser het Haskell programma te benaderen. De HTTP server biedt pagina's aan waarin JavaScript en HTML samenwerken om op het canvas te tekenen.
 
-Als via de API van Canvas.hs begonnen wordt met tekenen zal de HTTP server automatisch gestart worden. Het bestuuringssysteem wordt aangeroepen voor het openen van de standaard browser—verwijzende naar het adres van de lokaal draaiende HTTP server.
+Als via de API van Canvas.hs begonnen wordt met tekenen zal de HTTP server automatisch gestart worden. Het besturingssysteem wordt aangeroepen voor het openen van de standaard browser --verwijzende naar het adres van de lokaal draaiende HTTP server.
 \subsection{Protocol}
 De gegevens die verstuurd worden volgens het protocol zullen op een primaire gegevensstructuur moeten aanhouden. Hiervoor kunnen twee voor de hand liggende conventies gekozen worden: XML en JSON. Ons protocol zal gegevens coderen in JSON (JavaScript Object Notation). De voordelen van JSON zijn onder andere dat de data met weinig moeite direct gebruikt kan worden in JavaScript, lichtgewicht is en makkelijk te lezen is.
 \subsubsection{Websockets}
