--- a/verslag.tex
+++ b/verslag.tex
@@ -1,13 +1,17 @@
 \documentclass[a4paper]{report}
 \usepackage[dutch]{babel}
 \usepackage{graphicx}
+\usepackage{enumerate}
 
+\makeindex
 \begin{document}
 \input{./titlepage.tex}
+\tableofcontents
 
 \input{./Hoofdstukken/introductie.tex}
-
-\input{./Hoofdstukken/technisch_ontwerp.tex}
+\input{./Hoofdstukken/ontwerp.tex}
+\input{./Hoofdstukken/conclusie.tex}
+\input{./Hoofdstukken/evaluatie.tex}
 
 
 
