Part of inleiding written and encoding set to uft8 to simplify using accented letters

--- a/Hoofdstukken/inleiding.tex
+++ b/Hoofdstukken/inleiding.tex
@@ -1,4 +1,6 @@
 \chapter{Inleiding}
-\section{Sectie}
-\subsection{Subsectie}
-Tekst in subsectie.
+Bij het Informatica-keuzevak Functioneel Programmeren gebruiken studenten Haskell om fundamentele concepten van functioneel programmeren te bestuderen. Hierbij wordt door de studenten veel gebruik gemaakt van grafische weergaven om de werking van hun code inzichtelijk te maken. Het gebruik van Haskell voor het maken van grafische weergaven blijkt vaak redelijk gecompliceerd en  limiteert studenten doordat studenten zich ook bezig moeten houden met minder intuïtieve en minder essentiële aspecten van Haskell. 
+
+Om de focus binnen Functioneel Programmeren op de essentie te houden, is een simpele manier nodig om de Haskell code van de student om te zetten naar een grafische representatie. De interface tussen de code van de student en de grafische interface moet daarom eenvoudig en bruikbaar zijn zonder dat de ambitieuze student hierbij onnodig beperkt wordt.
+
+In dit ontwerpproject is Canvas.hs ontwikkeld; een omgeving die Haskell gebruikers in staat stelt op eenvoudige wijze grafische elementen op een HTML5 canvas te presenteren. 
