--- a/verslag.tex
+++ b/verslag.tex
@@ -2,6 +2,7 @@
 \usepackage[dutch]{babel}
 \usepackage{graphicx}
 \usepackage{enumerate}
+\usepackage[utf8]{inputenc}
 
 \makeindex
 \begin{document}
