Added labels to most chapters and sections and added custom referencing commands

--- a/Hoofdstukken/ontwerp.tex
+++ b/Hoofdstukken/ontwerp.tex
@@ -1,4 +1,4 @@
-\chapter{Ontwerp}
+\chapter{Ontwerp} \label{hoofdstuk:ontwerp}
 
 \input{./Hoofdstukken/ontwerp/requirements.tex}
 \input{./Hoofdstukken/ontwerp/globaal.tex}
