--- a/Hoofdstukken/ontwerp/detail.tex
+++ b/Hoofdstukken/ontwerp/detail.tex
@@ -1,4 +1,4 @@
-\section{Detail ontwerp}
+\section{Detail ontwerp} \label{sec:detail}
 
 \input{./Hoofdstukken/ontwerp/detail/architectuur.tex}
 \input{./Hoofdstukken/ontwerp/detail/externelibraries.tex}
