--- a/Hoofdstukken/ontwerp/requirements.tex
+++ b/Hoofdstukken/ontwerp/requirements.tex
@@ -1,4 +1,4 @@
-\section{Requirements}
+\section{Requirements} \label{sec:requirements}
 
 \begin{enumerate}[{R}1]
 	\item Het systeem dient events vanuit javascript door te geven aan het Haskell-programma van de student.
