Appendices: added gebruikerhandleiding appendix

--- a/verslag.tex
+++ b/verslag.tex
@@ -38,6 +38,9 @@
 \input{./Hoofdstukken/conclusie.tex}
 \input{./Hoofdstukken/evaluatie.tex}
 
+% Todo: daadwerkelijk iets met appendices package oid doen
+\newpage
+\input{./Hoofdstukken/appendices.tex}
 
 
 
