Gebruikershandleiding: inleiding done, started on primitieven

--- a/Hoofdstukken/appendices/1_gebruikershandleiding/inleiding.tex
+++ b/Hoofdstukken/appendices/1_gebruikershandleiding/inleiding.tex
@@ -1,4 +1,4 @@
-\subsection{Inleiding}
+\chapter{Inleiding}
 
 Canvas.hs is een haskell bibliotheek om op een simpele manier grafische elementen vanuit een haskell programma weer te geven en te reageren op input vanuit de gebruiker. Met behulp van een webbrowser, met javascript en canvaselement worden de primitieven getekend, en wordt op gebruikersinput gereageerd.
 
