--- a/Hoofdstukken/appendices/gebruikershandleiding.tex
+++ b/Hoofdstukken/appendices/gebruikershandleiding.tex
@@ -1,4 +1,13 @@
-\section{Appendix I: Gebruikerhandleiding} \label{sec:gebruikershandleiding}
+%commando's om een aantal vaak voorkomende wooden makkelijker te maken
+\newcommand{events}{\lstinline$Event$'s}
+\newcommand{actions}{\lstinline$Action$'s}
+\newcommand{shapes}{\lstinline$Shapes$'s}
+\newcommand{type}{1}{\lstinline$#1$}
+\newcommand{shape}{\type{Shape}}
+
+
+
+\part{Appendix I: Gebruikerhandleiding} \label{sec:gebruikershandleiding}
 
 %TODO: een appendix package oid gebruiken
 
