Made listings work with accents and removed some errors

--- a/Hoofdstukken/appendices/1_gebruikershandleiding/primitieven.tex
+++ b/Hoofdstukken/appendices/1_gebruikershandleiding/primitieven.tex
@@ -1,3 +1,4 @@
+% !TEX spellcheck = nl_NL
 \chapter{Primitieven}
 Nu we hebben gezien hoe we op verschillende \events kunnen reageren, en hoe we op basis daarvan Output kunnen genereren in de vorm van \shapes en \actions is het tijd om een volledig overzicht te geven van alle mogelijke \events , \shapes , en \actions.
 
@@ -180,7 +181,7 @@ data Shape = ...
 
 \subsubsection{Offset}
 \type{Offset} definieert een ander referentiepunt voor \type{Rotate} en \type{Scale}.
-\begin{lstlisting{
+\begin{lstlisting}
 data Shape = ...
 			| Offset Point Shape
 \end{lstlisting}
