--- a/Hoofdstukken/appendices/gebruikershandleiding.tex
+++ b/Hoofdstukken/appendices/gebruikershandleiding.tex
@@ -1,9 +1,9 @@
 %commando's om een aantal vaak voorkomende wooden makkelijker te maken
-\newcommand{events}{\lstinline$Event$'s}
-\newcommand{actions}{\lstinline$Action$'s}
-\newcommand{shapes}{\lstinline$Shapes$'s}
-\newcommand{type}{1}{\lstinline$#1$}
-\newcommand{shape}{\type{Shape}}
+\newcommand{\events}{\lstinline$Event$'s }
+\newcommand{\actions}{\lstinline$Action$'s }
+\newcommand{\shapes}{\lstinline$Shapes$'s }
+\newcommand{\type}{1}{\lstinline$#1$}
+\newcommand{\shape}{\type{Shape}}
 
 
 
@@ -12,6 +12,6 @@
 %TODO: een appendix package oid gebruiken
 
 \input{./Hoofdstukken/appendices/1_gebruikershandleiding/inleiding.tex}
-\input{./Hoofdstukken/appendices/1_gebruikershandleiding/basisinstructies.tex}
+\input{./Hoofdstukken/appendices/1_gebruikershandleiding/basisintructies.tex}
 \input{./Hoofdstukken/appendices/1_gebruikershandleiding/primitieven.tex}
 \input{./Hoofdstukken/appendices/1_gebruikershandleiding/voorbeelden.tex}
