--- a/Hoofdstukken/inleiding.tex
+++ b/Hoofdstukken/inleiding.tex
@@ -1,5 +1,6 @@
+% !TEX spellcheck = nl_NL
 \chapter{Inleiding}
-Bij het informatica-keuzevak Functioneel Programmeren gebruiken studenten Haskell om fundamentele concepten van functioneel programmeren te bestuderen. Hierbij wordt door de studenten veel gebruik gemaakt van grafische weergaven om de werking van hun code inzichtelijk te maken. Het gebruik van Haskell voor het maken van grafische weergaven blijkt vaak redelijk gecompliceerd en  limiteert studenten doordat zij zich bezig moeten houden met minder intuïtieve en minder essentiële aspecten van Haskell. 
+Bij het informatica-keuzevak Functioneel Programmeren gebruiken studenten Haskell om fundamentele concepten van functioneel programmeren te bestuderen. Hierbij wordt door de studenten veel gebruik gemaakt van grafische weergaven om de werking van hun code inzichtelijk te maken. Het gebruik van Haskell voor het maken van grafische weergaven blijkt vaak redelijk gecompliceerd en limiteert studenten doordat zij zich bezig moeten houden met minder intuïtieve en minder essentiële aspecten van Haskell. 
 
 Om de focus binnen Functioneel Programmeren op de essentie te houden, is een simpele manier nodig om de Haskell code van de student om te zetten naar een grafische representatie. De interface tussen de code van de student en de grafische interface moet daarom eenvoudig en bruikbaar zijn zonder dat de ambitieuze student hierbij onnodig beperkt wordt.
 
