Changed behaviour of some commands in appendices

--- a/verslag.tex
+++ b/verslag.tex
@@ -8,9 +8,9 @@
 \usepackage[hypcap]{caption} % Make figure references point to top of figure.
 \usepackage{listings} % listings to include code samples
 
-% To enable these accents inside lstlisting environments.
+% Enable these accents inside lstlisting environments.
 \lstset{
-  breaklines=true,
+  breaklines=true, % Enables wrapping in lstlisting environment.
   literate={ö}{{\"o}}1
            {ä}{{\"a}}1
            {ü}{{\"u}}1
