Space after lstinline no longer ignored

--- a/Hoofdstukken/appendices/gebruikershandleiding.tex
+++ b/Hoofdstukken/appendices/gebruikershandleiding.tex
@@ -1,9 +1,9 @@
 %commando's om een aantal vaak voorkomende wooden makkelijker te maken
-\newcommand{\events}{\lstinline{Event's}}
-\newcommand{\actions}{\lstinline{Action's}}
-\newcommand{\shapes}{\lstinline{Shapes's}}
+\newcommand{\events}{\lstinline{Event's}\xspace}
+\newcommand{\actions}{\lstinline{Action's}\xspace}
+\newcommand{\shapes}{\lstinline{Shapes's}\xspace}
 \newcommand{\type}{\lstinline}
-\newcommand{\shape}{\type{Shape}}
+\newcommand{\shape}{\type{Shape}\xspace}
 
 
 
