--- a/verslag.tex
+++ b/verslag.tex
@@ -7,6 +7,7 @@
 \usepackage{hyperref} % Turn references into links.
 \usepackage[hypcap]{caption} % Make figure references point to top of figure.
 \usepackage{listings} % listings to include code samples
+\usepackage{xspace} % Keeps space after lstinline commands.
 
 % Enable these accents inside lstlisting environments.
 \lstset{
