--- a/verslag.tex
+++ b/verslag.tex
@@ -7,15 +7,22 @@
 \usepackage{hyperref} % Turn references into links.
 \usepackage[hypcap]{caption} % Make figure references point to top of figure.
 \usepackage{listings} % listings to include code samples
+\usepackage[usenames]{xcolor} % to change color in code listings
 
-% Enable these accents inside lstlisting environments.
+% set parameters for lstlisting and lstinline
 \lstset{
   breaklines=true, % Enables wrapping in lstlisting environment.
-  literate={ö}{{\"o}}1
+  backgroundcolor=\color[HTML]{D6D6D6},
+  commentstyle=\color[HTML]{1A9E00},
+  keepspaces=true, 
+  language=Haskell,
+  numbers=left, %we need line numbers to make line wrapping obvious
+  tabsize=4,
+  literate={ö}{{\"o}}1 %handle some special chars
            {ä}{{\"a}}1
            {ü}{{\"u}}1
            {ë}{{\"e}}1
-           {ï}{{\"i}}1
+           {ï}{{\"i}}1  
 }
 
 % Necessary to make \autoref command display nice Dutch words.
@@ -35,9 +42,6 @@
   \def\FancyVerbLineautorefname{regel}
   \def\theoremautorefname{Theorema}
   \def\pageautorefname{pagina}
-  
-% set default language for listings (code samples) to haskell
-\lstset{language=Haskell} 
 
 % Two new commands to display references a certain way.
 \newcommand*{\fullref}[1]{\hyperref[{#1}]{\autoref*{#1}} \nameref*{#1}}
